Adjusted spacing issue on mobile sites.

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ body {
 
 h1 {
 	background-color: #240a00;
+	font-weight: 800;
 	color: #fff;
 	text-transform: uppercase;
 	padding-top: 0.5em;
@@ -113,6 +114,7 @@ nav a:hover {
 h2 {
 	text-align: center;
 	text-transform: uppercase;
+	font-weight: 800;
 	color: #4c1d0a;
 	margin: 0;
 	padding-top: 0.5em;
@@ -227,6 +229,7 @@ h3 {
 .contact-content h3 {
 	color: #b6511b;
 	padding-top: 1em;
+	font-weight: 800;
 	padding-left: 1em;
 	padding-right: 1em;
 }
@@ -268,6 +271,7 @@ h3 {
 	margin: 0;
 	padding-left: 1em;
 	padding-right: 1em;
+	font-weight: 800;
 }
 
 .hours {
